# respeaker_ros

./: README.md  package.xml  requirements.txt  setup.cfg  setup.py
launch/: respeaker_launch.py
resource/: respeaker_ros
respeaker_ros/: __init__.py  respeaker_gencfg.py  respeaker_node.py  speech_to_text.py
test/: test_installed.py
